apollo-federation/src/connectors/validation/snapshots/validation_tests@batch__batch_alias_happy_path.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/batch/batch_alias_happy_path.graphql
---
[]
